# hydra-swarm

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  conftest.py  patch_blueprint.py  patch_brave.py  patch_cli.py  patch_ensure.py  pyproject.toml
.opencode/agents/: adversary.md  blueprint.md  builder.md  defender.md
prompts/: architect.md  evaluator_agent.md  headless_agent.md  integrator_agent.md  librarian_agent.md  llm_judge.md
skills/hydra-architect/: SKILL.md
skills/hydra-architect/references/: brave-search-guide.md
skills/hydra-architect/scripts/: brave_search.py
skills/hydra-librarian/: SKILL.md
skills/hydra-proceed/: SKILL.md
src/hydra_swarm/: cli.py  orchestrator.py
src/hydra_swarm/agents/: adversary.md  architect.md  blueprint.md  builder.md  defender.md  hydra-architect.md  hydra-conductor.md  hydra-librarian.md  librarian.md
src/hydra_swarm/skills/hydra-architect/: SKILL.md
tests/: test_brave_search.py  test_continue.py  test_defender.py  test_e2e_search_index.py  test_hydra_search.py  test_no_hermes_routing.py  test_preflight.py  test_search_index_append.py  test_search_index_lookup.py  test_use_hermes_routing.py
wiki/: architecture.md  index.md  log.md  philosophy.md
wiki/components/: agent-lifecycle.md  architect.md  evaluation-engine.md  integrator.md  librarian.md  orchestrator-loop.md  post-merge.md  sandbox-manager.md  schema-contract.md
wiki/process/: session-checklist.md
wiki/sessions/: 2026-05-19-design.md
wiki/versions/: v1-scope.md  v2-future.md
(+5 files in other folders)
